samples/_failures_safe/1761397910_59b833_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b551e3d3.c: In function ‘main’:
./samples/SAFE/__tmp_b551e3d3.c:138:5: error: expected expression at end of input
  138 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b551e3d3.c:138:5: error: expected declaration or statement at end of input
